--- a/src/App.css
+++ b/src/App.css
@@ -7,15 +7,13 @@
   pointer-events: none;
 }
 
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
 
 .App-header {
-  /* background-color: #282c34; */
-  min-height: 100vh;
+  background-image: url("./assets/5361112.png");
+background-size: cover;
+background-repeat: no-repeat;
+padding-bottom: 3rem;
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,11 +25,17 @@
   color: #61dafb;
 }
 
-/* @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
+.btn{
+  background-color: rgb(133,177,174);
+  padding: 0.7rem 2rem 0.7rem 2rem;
+  border-radius: 0.3rem;
+  border: 0px solid white;
+  color: white;
+}
+
+main{ 
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 0 5%;
+}
+
