--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@
   pointer-events: none;
 }
 
+body{
+  background-color: rgb(219, 230, 233);
+}
 
 .App-header {
   background-image: url("./assets/5361112.png");
@@ -34,8 +37,46 @@ padding-bottom: 3rem;
 }
 
 main{ 
-  max-width: 600px;
+  max-width: 700px;
   margin: 0 auto;
   padding: 0 5%;
 }
 
+
+.portfolio-cards{
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+}
+
+.card-image{
+  max-width: 100%;
+}
+
+.AvatarName{
+  background-color: white;
+  margin-top: -4px;
+  padding: 10px 20px 10px 20px;
+}
+
+p, h2{
+  color: rgb(111, 108, 108);
+}
+
+
+@media screen and (min-width: 350px){
+  .portfolio-cards{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+  }
+}
+
+
+@media screen and (min-width: 708px){
+  .portfolio-cards{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+  }
+}
